--- a/kr/index.html
+++ b/kr/index.html
@@ -218,7 +218,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Kirvas</div>
-									<div class="team-type">CEO (Chief Executive Officer) (Europe)</div>
+									<div class="team-type">CEO (Chief Executive Officer)</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
