--- a/ch/index.html
+++ b/ch/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="/css/slick.css" media="all">
 	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="/css/style.css?v27" media="all">
+	<link rel="stylesheet" href="/css/style.css?v28" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -762,8 +762,8 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://open.kakao.com/o/gvAI0sbb" class="social-image">
-								<img src="/images/social-image-10.png" alt="">
+							<a href="https://bitcointalk.org/index.php?topic=5146854.0" class="social-image">
+								<img src="/images/social-image-15.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
@@ -964,7 +964,7 @@
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/alfaNavbar.min.js"></script>
 	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v27"></script>
+	<script src="/js/scripts.js?v28"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
