--- a/index.html
+++ b/index.html
@@ -221,6 +221,14 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
+										<img src="/images/team-image-18.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/jason-h-jang-21284615a" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Jason H. Jang</div>
+									<div class="team-type">Chief information officer</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
 										<img src="/images/team-image-2.jpg" alt="">
 									</div>
 									<a href="https://medium.com/@p.protocol/interview-cmo-pp-4e0990df1296" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
