--- a/jp/index.html
+++ b/jp/index.html
@@ -231,7 +231,7 @@
 									<div class="team-image">
 										<img src="/images/team-image-2.jpg" alt="">
 									</div>
-									<a href="https://medium.com/@p.protocol/interview-cmo-pp-4e0990df1296" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<a href="https://www.linkedin.com/in/julia-choi-b4a669189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Julia Choi</div>
 									<div class="team-type">CMO</div>
 								</div>
