--- a/ch/index.html
+++ b/ch/index.html
@@ -68,6 +68,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
@@ -194,6 +195,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
@@ -353,6 +355,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
@@ -494,6 +497,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
@@ -569,6 +573,26 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">参加预IEO</a>
 			</div>
 		</div>
+		<div class="colored-bg box-wrapper ledger-wrapper">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				</ul>
+			</div>
+			<section class="box box-table ledger" id="ledger">
+				<img src="images/ledger-bg-image.jpg" alt="Ledger" class="box-image">
+			</section>
+		</div>
 		<div class="colored-bg v2 box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"></div>
 			<div class="page-scroller-wrapper">
@@ -579,6 +603,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
@@ -645,6 +670,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
@@ -712,6 +738,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
@@ -752,6 +779,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">博客</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
