--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
@@ -194,6 +195,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
@@ -353,6 +355,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
@@ -494,6 +497,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
@@ -569,6 +573,25 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
+		<div class="colored-bg box-wrapper ledger-wrapper">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				</ul>
+			</div>
+			<section class="box box-table ledger" id="ledger">
+				<img src="images/ledger-bg-image.jpg" alt="Ledger" class="box-image">
+			</section>
+		</div>
 		<div class="colored-bg v2 box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"></div>
 			<div class="page-scroller-wrapper">
@@ -579,6 +602,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
@@ -645,6 +669,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
@@ -712,6 +737,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
@@ -752,6 +778,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
@@ -968,11 +995,11 @@
 
 
 	<!-- <Scripts -->
-	<script src="/js/jquery-2.0.3.min.js"></script>
-	<script src="/js/slick.min.js"></script>
-	<script src="/js/alfaNavbar.min.js"></script>
-	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v28"></script>
+	<script src="js/jquery-2.0.3.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/alfaNavbar.min.js"></script>
+	<script src="js/jquery.fancybox.min.js"></script>
+	<script src="js/scripts.js?v28"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
