--- a/kr/index.html
+++ b/kr/index.html
@@ -68,6 +68,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -195,6 +196,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -354,6 +356,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -429,6 +432,26 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
+		<div class="colored-bg box-wrapper ledger-wrapper">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				</ul>
+			</div>
+			<section class="box box-table ledger" id="ledger">
+				<img src="images/ledger-bg-image.jpg" alt="Ledger" class="box-image">
+			</section>
+		</div>
 		<div class="colored-bg v2 box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"></div>
 			<div class="page-scroller-wrapper">
@@ -439,6 +462,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -505,6 +529,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -571,6 +596,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -713,6 +739,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -753,6 +780,7 @@
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
