--- a/jp/index.html
+++ b/jp/index.html
@@ -592,6 +592,10 @@
 			<section class="box box-table ledger" id="ledger">
 				<img src="images/ledger-bg-image.jpg" alt="Ledger" class="box-image">
 			</section>
+			<div class="bottom-panel">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
+			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"></div>
