--- a/kr/index.html
+++ b/kr/index.html
@@ -449,7 +449,7 @@
 				</ul>
 			</div>
 			<section class="box box-table ledger" id="ledger">
-				<img src="images/ledger-bg-image.jpg" alt="Ledger" class="box-image">
+				<img src="/images/ledger-bg-image.jpg" alt="Ledger" class="box-image">
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
