--- a/jp/index.html
+++ b/jp/index.html
@@ -576,17 +576,16 @@
 		<div class="colored-bg box-wrapper ledger-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
 					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
 				</ul>
 			</div>
 			<section class="box box-table ledger" id="ledger">
