--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 			</div>
 		</div>		
-		<div class="top-gradient-bg box-wrapper">
+		<div class="top-gradient-bg box-wrapper team-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
@@ -215,7 +215,7 @@
 							<div class="team-slider team-list">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-14.jpg" alt="">
+										<img src="/images/man-image-6.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Kirvas</div>
@@ -223,7 +223,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-18.jpg" alt="">
+										<img src="/images/man-image-3.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/jason-h-jang-21284615a" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Jason H. Jang</div>
@@ -231,7 +231,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-2.jpg" alt="">
+										<img src="/images/man-image-5.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/julia-choi-b4a669189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Julia Choi</div>
@@ -239,7 +239,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-16.jpg" alt="">
+										<img src="/images/man-image-8.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/ongjunhao" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">ONG Jun Hao</div>
@@ -247,7 +247,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-5.jpg" alt="">
+										<img src="/images/man-image-7.png" alt="">
 									</div>
 									<!--<a href="" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>-->
 									<div class="team-name">Eu Chan</div>
@@ -255,7 +255,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-15.jpg" alt="">
+										<img src="/images/man-image-1.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Richards</div>
