--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 					<h3 class="box-title-ann mtop ta-r">Team</h3>
 					<div class="team-container">
 						<div class="team-slider-wrapper">
-							<div class="team-slider team-list">
+							<div class="team-slider">
 								<div class="team-slide">
 									<div class="team-image">
 										<img src="/images/man-image-6.png" alt="">
