--- a/index.html
+++ b/index.html
@@ -186,6 +186,30 @@
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 			</div>
 		</div>		
+		<div class="colored-bg box-wrapper ledger-wrapper">
+			<div class="box-bg-image" style="background-image: url(images/ledger-bg-image.jpg);"></div>
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				</ul>
+			</div>
+			<section class="box box-table ledger" id="ledger">
+				
+			</section>
+			<div class="bottom-panel">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
+			</div>
+		</div>
 		<div class="top-gradient-bg box-wrapper team-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -260,6 +284,22 @@
 									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Richards</div>
 									<div class="team-type">Business Development Advisor (Korea)</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/man-image-4.png" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/boris-dergachov-6945a9189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Boris D</div>
+									<div class="team-type">СТО (Chief Technology Officer)</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/man-image-2.png" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/pichugin-ruslan-170a9641/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Ruslan Pichugin</div>
+									<div class="team-type">CTO(Chief Strategy Officer)</div>
 								</div>
 							</div>
 						</div>
@@ -573,29 +613,6 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
-		<div class="colored-bg box-wrapper ledger-wrapper">
-			<div class="page-scroller-wrapper">
-				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
-				</ul>
-			</div>
-			<section class="box box-table ledger" id="ledger">
-				<img src="images/ledger-bg-image.jpg" alt="Ledger" class="box-image">
-			</section>
-			<div class="bottom-panel">
-				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
-			</div>
-		</div>
 		<div class="colored-bg v2 box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"></div>
 			<div class="page-scroller-wrapper">
@@ -679,7 +696,7 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
-			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
+			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.png);"><img src="/images/roadmap-image-m.jpg"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
 				<div class="box-cell">
 					<!--
