--- a/jp/index.html
+++ b/jp/index.html
@@ -186,7 +186,31 @@
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 			</div>
 		</div>
-		<div class="top-gradient-bg box-wrapper">
+		<div class="colored-bg box-wrapper ledger-wrapper">
+			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"></div>
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				</ul>
+			</div>
+			<section class="box box-table ledger" id="ledger">
+				
+			</section>
+			<div class="bottom-panel">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
+			</div>
+		</div>
+		<div class="top-gradient-bg box-wrapper team-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
@@ -212,10 +236,10 @@
 					<h3 class="box-title-ann mtop ta-r">チーム</h3>
 					<div class="team-container">
 						<div class="team-slider-wrapper">
-							<div class="team-slider team-list">
+							<div class="team-slider">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-14.jpg" alt="">
+										<img src="/images/man-image-6.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Kirvas</div>
@@ -223,7 +247,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-18.jpg" alt="">
+										<img src="/images/man-image-3.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/jason-h-jang-21284615a" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Jason H. Jang</div>
@@ -231,7 +255,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-2.jpg" alt="">
+										<img src="/images/man-image-5.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/julia-choi-b4a669189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Julia Choi</div>
@@ -239,7 +263,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-16.jpg" alt="">
+										<img src="/images/man-image-8.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/ongjunhao" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">ONG Jun Hao</div>
@@ -247,7 +271,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-5.jpg" alt="">
+										<img src="/images/man-image-7.png" alt="">
 									</div>
 									<!--<a href="" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>-->
 									<div class="team-name">Eu Chan</div>
@@ -255,11 +279,27 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-15.jpg" alt="">
+										<img src="/images/man-image-1.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Richards</div>
 									<div class="team-type">Business Development Advisor (Korea)</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/man-image-4.png" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/boris-dergachov-6945a9189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Boris D</div>
+									<div class="team-type">СТО (Chief Technology Officer)</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/man-image-2.png" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/pichugin-ruslan-170a9641/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Ruslan Pichugin</div>
+									<div class="team-type">CTO(Chief Strategy Officer)</div>
 								</div>
 							</div>
 						</div>
@@ -571,29 +611,6 @@
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">プレIEOに参加する</a>
-			</div>
-		</div>
-		<div class="colored-bg box-wrapper ledger-wrapper">
-			<div class="page-scroller-wrapper">
-				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
-					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
-				</ul>
-			</div>
-			<section class="box box-table ledger" id="ledger">
-				<img src="/images/ledger-bg-image.jpg" alt="Ledger" class="box-image">
-			</section>
-			<div class="bottom-panel">
-				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper token-inside">
